--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 - Add push_expr helper function to Transpilation
-- Fill in null arguments with nil
+- Check for more reserved names
 - Implement tables
 - Add iteration
