update todo again

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 - Add push_expr helper function to Transpilation
 - Check for more reserved names
+- Make argument guards optional
 - Implement tables
 - Add iteration
