slightly change insertion

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
-
+- Make insertion expressions recursive
+- Seperate checking from transpilation
+- Add mapping expressions
 - Implement tables
 - Add iteration
