update todo again

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 - Add panics and stack traces
 - Add list pattern matching
 - Add variadic parameters
+- Add list push/pop
 - Add mapping expressions
 - Add iteration
